--- a/src/Components/Header/Nav/Nav.module.css
+++ b/src/Components/Header/Nav/Nav.module.css
@@ -4,3 +4,13 @@
     display: flex;
     justify-content: space-around;
 }
+
+.nav a {
+    text-decoration: none;
+    color: #c4cfde;
+    font-weight: bold;
+}
+
+.nav a:hover {
+    color: #ff014f;
+}
