--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -15,10 +15,25 @@
     align-items: center;
 }
 
+.footerContainer span {
+    color: #c4cfde;
+    background-color: lemonchiffon;
+}
+
 .links {
     width: 250px;
     display: flex;
     justify-content: space-between;
+    background-color: lemonchiffon;
+}
+
+.links a {
+    text-decoration: none;
+    color: #c4cfde;
+}
+
+.links a:hover {
+    color: #ff014f;
 }
 
 @media screen and (min-width: 360px) {
