--- a/src/Components/MyProjects/Project/Project.module.css
+++ b/src/Components/MyProjects/Project/Project.module.css
@@ -46,7 +46,8 @@
     font-size: 23px;
     text-decoration: none;
     font-weight: 700;
-    color: white;
+    color: #c4cfde;
+    background-color: lemonchiffon;
 }
 
 .link:hover {
@@ -56,7 +57,7 @@
 .linkImage {
     padding: 14px 14px;
     background-color: #ff014f;
-    color: white;
+    color: #c4cfde;
     border-radius: 6px;
     font-size: 18px;
     font-weight: 500;
