--- a/src/Components/MySkills/MySkills.module.css
+++ b/src/Components/MySkills/MySkills.module.css
@@ -8,11 +8,12 @@
 .skillsWrapper {
     height: 100%;
     width: 80%;
-    border: 1px solid;
+    border: 1px solid black;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: #c4cfde;
 }
 
 .skillContainer {
@@ -22,6 +23,10 @@
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+}
+
+h2 {
+    background-color: lemonchiffon;
 }
 
 @media screen and (min-width: 375px) {
