--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -2,14 +2,14 @@
     height: 80px;
     background-color: blue;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
-    padding-right: 50px;
+    padding: 0 50px;
 }
 
 @media screen and (max-width: 375px) {
     .header {
         justify-content: center;
-        padding-right: 0;
+        padding-right: 20px;
     }
 }
