--- a/src/Components/Header/Nav/Nav.module.css
+++ b/src/Components/Header/Nav/Nav.module.css
@@ -1,16 +1,124 @@
-.nav {
+.hamburger_menu {
     border: 1px solid;
     width: 300px;
-    display: flex;
-    justify-content: space-around;
 }
 
-.nav a {
+.hamburger_menu a {
     text-decoration: none;
     color: #c4cfde;
     font-weight: bold;
 }
 
-.nav a:hover {
+.hamburger_menu a:hover {
     color: #ff014f;
+}
+
+.menu__box {
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
+}
+
+.menu__box li {
+    list-style-type: none;
+}
+
+.menu__btn, #menu__toggle {
+    display: none;
+}
+
+@media screen and (min-width: 360px) and (max-width: 700px) {
+
+    .hamburger_menu {
+        border: none;
+    }
+
+    .hamburger_menu a {
+        color: #333;
+    }
+
+    #menu__toggle {
+        opacity: 0;
+    }
+
+    #menu__toggle:checked + .menu__btn > span {
+        transform: rotate(45deg);
+    }
+
+    #menu__toggle:checked + .menu__btn > span::before {
+        top: 0;
+        transform: rotate(0deg);
+    }
+
+    #menu__toggle:checked + .menu__btn > span::after {
+        top: 0;
+        transform: rotate(90deg);
+    }
+
+    #menu__toggle:checked ~ .menu__box {
+        left: 0 !important;
+    }
+
+    .menu__btn {
+        display: block;
+        position: fixed;
+        top: 30px;
+        left: 20px;
+        width: 26px;
+        height: 26px;
+        cursor: pointer;
+        z-index: 1;
+    }
+
+    .menu__btn > span,
+    .menu__btn > span::before,
+    .menu__btn > span::after {
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        background-color: #333;
+        transition-duration: .25s;
+    }
+
+    .menu__btn > span::before {
+        content: '';
+        top: -8px;
+    }
+
+    .menu__btn > span::after {
+        content: '';
+        top: 8px;
+    }
+
+    .menu__box {
+        display: block;
+        position: fixed;
+        top: 0;
+        left: -100%;
+        width: 250px;
+        height: 100%;
+        margin: 0;
+        padding: 80px 0;
+        list-style: none;
+        background-color: #ECEFF1;
+        box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
+        transition-duration: .25s;
+    }
+
+    .menu__item {
+        display: block;
+        padding: 12px 24px;
+        color: #333;
+        font-family: 'Roboto', sans-serif;
+        font-size: 20px;
+        font-weight: 600;
+        text-decoration: none;
+        transition-duration: .25s;
+    }
+
+    .menu__item:hover {
+        background-color: #CFD8DC;
+    }
 }
