--- a/src/Components/Main/Main.module.css
+++ b/src/Components/Main/Main.module.css
@@ -1,6 +1,8 @@
 .mainBlock {
     min-height: 100vh;
     background-color: olivedrab;
+    display: flex;
+    align-items: center;
 }
 
 .container {
@@ -11,6 +13,7 @@
     height: 100%;
     width: 80%;
     flex-wrap: wrap;
+    border: 1px solid;
 }
 
 .photo {
@@ -28,4 +31,12 @@
 
 .infoContainer h1{
     color: #c4cfde;
+}
+
+@media screen and (min-width: 360px) and (max-width: 700px) {
+    .photo {
+        height: 350px;
+        width: 100%;
+        margin-top: 20px;
+    }
 }
