--- a/src/Components/Header/Nav/Nav.module.css
+++ b/src/Components/Header/Nav/Nav.module.css
@@ -64,7 +64,7 @@
         display: block;
         position: fixed;
         top: 30px;
-        left: 20px;
+        right: 20px;
         width: 26px;
         height: 26px;
         cursor: pointer;
@@ -79,7 +79,7 @@
         width: 100%;
         height: 2px;
         background-color: #333;
-        transition-duration: .25s;
+        transition-duration: .5s;
     }
 
     .menu__btn > span::before {
@@ -104,7 +104,7 @@
         list-style: none;
         background-color: #ECEFF1;
         box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
-        transition-duration: .25s;
+        transition-duration: .5s;
     }
 
     .menu__item {
@@ -115,7 +115,7 @@
         font-size: 20px;
         font-weight: 600;
         text-decoration: none;
-        transition-duration: .25s;
+        transition-duration: .5s;
     }
 
     .menu__item:hover {
