--- a/src/Components/MyProjects/MyProjects.module.css
+++ b/src/Components/MyProjects/MyProjects.module.css
@@ -1,17 +1,18 @@
 .mainBlock {
-    min-height: 90vh;
-    background-color: grey;
-    display: flex;
-    align-items: center;
+    padding: 100px 0;
+    font-family: 'Montserrat', sans-serif;
+    background-size: cover;
 }
 
 .mainContainer {
     border: 1px solid;
     height: 90%;
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
 }
 
 .projectsContainer {
@@ -19,9 +20,4 @@
     justify-content: space-around;
     width: 100%;
     flex-wrap: wrap;
-}
-
-.title {
-    margin: 0 auto;
-    color: #c4cfde;
 }
