--- a/src/Components/MyProjects/Project/Project.module.css
+++ b/src/Components/MyProjects/Project/Project.module.css
@@ -1,5 +1,5 @@
 .projectMainBlock {
-    width: 300px;
+    width: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,61 +7,69 @@
 }
 
 .projectBlock {
+    margin-bottom: 40px;
+    height: 400px;
     width: 100%;
-    border-radius: 7px;
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-size: cover;
+    background-position: center;
     position: relative;
-    margin-bottom: 10px;
+    box-shadow: 10px 10px 19px #1c1e22, -10px -10px 19px #262a2e;
 }
 
-.image {
-    opacity: 1;
-    display: block;
+.linkImage {
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
     width: 100%;
     height: 100%;
-    transition: .5s ease;
-    backface-visibility: hidden;
-    border-radius: 10px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #000;
+    opacity: 0;
+    transition: all 0.2s ease-in-out;
 }
 
-.linkContainer {
-    transition: .5s ease;
-    opacity: 0;
+.projectMainBlock:hover .linkImage {
+    opacity: 0.9;
+    border-radius: 6px;
+}
+
+.projectMainBlock:hover .linkImage span {
+    top: 46%;
+    transition: all 0.2s ease-in-out;
+}
+
+.linkImage span {
     position: absolute;
+    content: '';
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    text-align: center;
-}
-
-.projectBlock:hover .image {
-    opacity: 0.3;
-}
-
-.projectBlock:hover .linkContainer {
-    opacity: 1;
+    background-color: #ff014f;
+    padding: 10px 18px;
+    border-radius: 6px;
+    transition: all 0.2s ease-in-out;
 }
 
 .link {
-    font-size: 23px;
-    text-decoration: none;
+    font-size: 22px;
     font-weight: 700;
+    text-decoration: none;
     color: #c4cfde;
     border: 1px solid black;
 }
 
-.link:hover {
+.projectMainBlock:hover .link {
     color: #ff014f;
-}
-
-.linkImage {
-    padding: 14px 14px;
-    background-color: #ff014f;
-    color: #c4cfde;
-    border-radius: 6px;
-    font-size: 18px;
-    font-weight: 500;
-    text-decoration: none;
+    opacity: 1;
 }
 
 @media screen and (min-width: 360px) {
