--- a/src/Components/MyProjects/MyProjects.module.css
+++ b/src/Components/MyProjects/MyProjects.module.css
@@ -2,10 +2,11 @@
     padding: 100px 0;
     font-family: 'Montserrat', sans-serif;
     background-size: cover;
+    opacity: 0.8;
 }
 
 .mainContainer {
-    border: 1px solid;
+    /*border: 1px solid;*/
     height: 90%;
     width: 90%;
     margin: 0 auto;
@@ -20,4 +21,5 @@
     justify-content: space-around;
     width: 100%;
     flex-wrap: wrap;
+    margin-top: 20px;
 }
