--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,25 @@
 .App {
 
 }
+
+.separator {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 1px;
+    z-index: 2;
+    margin: 60px 0 !important;
+}
+
+.separator::after {
+    position: absolute;
+    width: 80%;
+    height: 100%;
+    background: #121415;
+    content: "";
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    z-index: -1;
+}
