--- a/src/Components/Contacts/Contacts.module.css
+++ b/src/Components/Contacts/Contacts.module.css
@@ -1,31 +1,100 @@
 .mainBlock {
-    min-height: 50vh;
-    background-color: tan;
+    min-height: 100vh;
+    background-color: #212428;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 50px 0;
 }
 
 .formContainer {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    border: 1px solid black;
-    height: 80%;
-    width: 80%;
-    color: #c4cfde;
+    width: 50%;
+    box-shadow: 10px 10px 19px #1c1e22, -10px -10px 19px #262a2e;
+    padding: 30px;
+    border-radius: 10px;
+    /*margin-left: 20px;*/
+    /*height: 100%;*/
+}
+
+.formContainer legend {
+    margin: 0 auto;
 }
 
 .inputStyle {
-    width: 250px;
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
-.submit {
-    color: #ff014f;
+.inputStyle input {
+    width: 100%;
+    background-color: #191b1e;
+    border-radius: 6px;
+    height: 55px;
+    transition: 0.4s;
+    border: 2px solid #191b1e;
+    padding: 0 15px;
+    font-size: 14px;
+    font-family: "Montserrat", sans-serif;
+    color: #c4cfde !important;
+    box-shadow: 1px 4px 2px -3px rgba(0, 0, 0, 0.7) inset, -1px -3px 3px -2px rgba(255, 255, 255, 0.2) inset;
+    letter-spacing: 1px;
+}
+
+.inputStyle label, .submitStyle label {
+    font-family: "Montserrat", sans-serif;
+    font-size: 12px;
+    color: #a0a8b3;
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin-bottom: 14px;
+    text-align: left;
+    line-height: 22px;
+}
+
+.submitStyle:hover .submit{
+    transform: translateY(-5px);
+}
+
+.submitStyle textarea {
+    min-height: 216px;
+    background-color: #191b1e;
+    border-radius: 6px;
+    padding: 0;
+    transition: 0.4s;
+    border: 2px solid #191b1e;
+    font-size: 14px;
+    line-height: 18px;
+    font-family: "Montserrat", sans-serif;
+    color: #c4cfde;
+    box-shadow: 1px 4px 2px -3px rgba(0, 0, 0, 0.7) inset, -1px -3px 3px -2px rgba(255, 255, 255, 0.2) inset;
+    letter-spacing: 1px;
+    resize: none;
+    width: 100%;
+    margin: 14px 0;
+}
+
+.submitStyle .submit {
+    width: 100%;
+    border-radius: 6px;
+    background: linear-gradient(145deg, #1e2024, #23272b);
+    box-shadow: 10px 10px 19px #1c1e22, -10px -10px 19px #262a2e;
+    --shadow-2: inset 21px 21px 19px #181a1d, inset -21px -21px 19px;
+    transition: 0.4s;
+    position: relative;
+    z-index: 1;
+    font-size: 14px;
+    font-weight: 500;
+    border: 0 none;
+    cursor: pointer;
+    padding: 15px;
+    font-family: "Montserrat", sans-serif;
+    color: #c4cfde !important;
+    letter-spacing: 1px;
 }
 
 h3 {
