--- a/src/Components/MySkills/MySkills.module.css
+++ b/src/Components/MySkills/MySkills.module.css
@@ -1,5 +1,5 @@
 .skillsBlock {
-    min-height: 100vh;
+    min-height: 90vh;
     background-color: #212428;
     display: flex;
     align-items: center;
@@ -8,12 +8,13 @@
 .skillsWrapper {
     height: 100%;
     width: 90%;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     color: #c4cfde;
+    padding-bottom: 100px;
 }
 
 .skillContainer {
@@ -26,5 +27,6 @@
 }
 
 h2 {
-    border: 1px solid black;
+    /*border: 1px solid black;*/
+    margin-top: 0 ;
 }
