--- a/src/Components/Footer/SocialNetworks/SocialNetworks.module.css
+++ b/src/Components/Footer/SocialNetworks/SocialNetworks.module.css
@@ -1,23 +1,37 @@
-.links {
-    width: 250px;
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid;
-    font-weight: bold;
-}
-
-.links a {
-    text-decoration: none;
+.iconLink {
+    font-size: 17px;
+    font-weight: 400;
+    transition: 0.4s;
     color: #c4cfde;
+    position: relative;
+    display: inline-block;
+    padding: 0;
+    width: 55px;
+    height: 55px;
+    line-height: 64px;
+    text-align: center;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    border-radius: 6px;
+    background: linear-gradient(145deg, #1e2024, #23272b);
+    box-shadow: 10px 10px 19px #1c1e22, -10px -10px 19px #262a2e;
+    margin: 0 20px 25px 0;
 }
 
-.links a:hover {
-    color: #ff014f;
+.iconLink:hover {
+    transform: translateY(-3px);
+    background: #ff014f;
 }
 
-@media screen and (min-width: 360px) and (max-width: 700px) {
-    .links {
-        flex-direction: column;
-        width: auto;
-    }
+.iconLink div {
+    background-size: auto 60%;
+    background-repeat: no-repeat;
+    background-position: center;
+    color: #c4cfde;
+    font-size: 20px;
+    height: 100%;
+    line-height: 62px;
+    transition: .4s;
+    width: 100%;
+
 }
