--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -1,32 +1,32 @@
 .mainBlock {
-    min-height: 10vh;
-    background-color: rosybrown;
+    height: 5vh;
+    background-color: #212428;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 16px;
+    color: #878e99;
+    font-family: "Poppins", sans-serif;
+    line-height: 1.6;
+    font-weight: 400;
 }
 
 .footerContainer {
     height: 100%;
     width: 80%;
-    border-top: 2px solid;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 30px 5px 50px 5px;
 }
 
 .footerContainer span {
     color: #c4cfde;
-    border: 1px solid black;
+    padding-bottom: 10px;
 }
 
-@media screen and (min-width: 360px) {
-    .mainBlock {
-        min-height: 15vh;
-    }
-
-    .links {
-        flex-direction: column;
-        width: auto;
-    }
+.iconsContainer {
+    display: flex;
+    list-style: none;
+    flex-wrap: wrap;
 }
