--- a/src/Components/MySkills/Skill/Skill.module.css
+++ b/src/Components/MySkills/Skill/Skill.module.css
@@ -14,6 +14,10 @@
     transition: 700ms cubic-bezier(0.17, 0.67, 0, 1.01);
 }
 
+.skillMainBlock:hover {
+    background: linear-gradient(to right bottom, #212428, #16181c);
+}
+
 .skillContainer {
     position: relative;
     transform: translateY(10px);
