--- a/src/Components/Main/Main.module.css
+++ b/src/Components/Main/Main.module.css
@@ -3,29 +3,60 @@
     display: flex;
     align-items: center;
     background-color: #212428;
+    animation: bg-animation 85s ease-in-out infinite;
+    background-image: url('../assets/img/bgMain.jpg');
+    background-repeat: no-repeat;
+}
+
+@keyframes bg-animation {
+    0% {
+        background-size: 120%;
+        background-position: 50% 50%
+    }
+    20% {
+        background-size: 150%;
+        background-position: 0 50%;
+    }
+    40% {
+        background-size: 110%;
+        background-position: 20% 80%;
+    }
+    60% {
+        background-size: 160%;
+        background-position: 60% 10%;
+    }
+    80% {
+        background-size: 120%;
+        background-position: 40% 70%;
+    }
+    100% {
+        background-size: 120%;
+        background-position: 50% 50%
+    }
 }
 
 .container {
-    margin: 0 auto;
+    margin: 100px auto;
     display: flex;
     align-items: center;
     justify-content: space-around;
     height: 100%;
-    width: 80%;
+    width: 90%;
     flex-wrap: wrap;
-    /*border: 1px solid;*/
 }
 
 .photo {
     height: 650px;
-    /*width: 370px;*/
 }
 
 .infoContainer {
     color: #c4cfde;
     font-weight: bold;
     font-size: 23px;
-    padding-bottom: 150px;
+    /*padding-bottom: 150px;*/
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .infoContainer h1 {
@@ -71,6 +102,11 @@
     box-shadow: 10px 10px 19px #1c1e22, -10px -10px 19px #262a2e;
     border-radius: 6px;
 }
+
+.networkWrapper {
+    margin-top: 100px;
+}
+
 
 @media screen and (min-width: 360px) and (max-width: 700px) {
     .photo {
