--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,9 @@
     margin: 0 auto;
     z-index: -1;
 }
+
+@media screen and (min-width: 360px) and (max-width: 700px) {
+    .separator {
+        display: none;
+    }
+}
