--- a/src/Components/Header/Nav/Nav.module.css
+++ b/src/Components/Header/Nav/Nav.module.css
@@ -1,12 +1,10 @@
 .hamburger_menu {
-    /*border: 1px solid;*/
     width: 300px;
 }
 
 .hamburger_menu a {
     text-decoration: none;
     color: #c4cfde;
-    /*font-weight: bold;*/
 }
 
 .hamburger_menu a:hover {
@@ -63,7 +61,7 @@
     .menu__btn {
         display: block;
         position: fixed;
-        top: 30px;
+        top: 40px;
         right: 20px;
         width: 26px;
         height: 26px;
@@ -98,9 +96,8 @@
         top: 0;
         left: -100%;
         width: 250px;
-        height: 100%;
         margin: 0;
-        padding: 80px 0;
+        padding: 100px 0 400px 0;
         list-style: none;
         background-color: #ECEFF1;
         box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
