--- a/src/Components/Main/Main.module.css
+++ b/src/Components/Main/Main.module.css
@@ -95,7 +95,6 @@
     content: "";
     left: 50%;
     bottom: 0;
-    -webkit-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
     transform: translateX(-50%);
     background: linear-gradient(145deg, #1e2024, #23272b);;
@@ -109,9 +108,32 @@
 
 
 @media screen and (min-width: 360px) and (max-width: 700px) {
+    .mainBlock {
+        background-image: url('../assets/img/bgMainMob.jpg');
+        margin-bottom: 50px;
+        background-repeat: repeat;
+    }
+
+    .container {
+        flex-direction: column-reverse;
+    }
+
+    .infoContainer {
+        padding-left: 10px;
+    }
+
+    .imageContainer {
+        margin-bottom: 50px;
+    }
+
     .photo {
-        height: 350px;
+        height: 450px;
         width: 100%;
         margin-top: 20px;
     }
+
+    .networkWrapper {
+        margin-top: 50px;
+    }
+
 }
