--- a/src/Components/MyProjects/Project/Project.module.css
+++ b/src/Components/MyProjects/Project/Project.module.css
@@ -73,8 +73,12 @@
     opacity: 1;
 }
 
-@media screen and (min-width: 360px) {
+@media screen and (min-width: 360px) and (max-width: 700px) {
     .projectMainBlock {
-        margin: 10px 0;
+        margin: 30px 0;
+    }
+
+    .projectBlock {
+        margin-bottom: 30px;
     }
 }
