--- a/src/Components/MySkills/MySkills.module.css
+++ b/src/Components/MySkills/MySkills.module.css
@@ -27,3 +27,9 @@
 h2 {
     margin-top: 0 ;
 }
+
+@media screen and (min-width: 360px) and (max-width: 700px) {
+    .skillsBlock {
+        margin-bottom: 35px;
+    }
+}
