--- a/src/Components/common/SocialNetworks/SocialNetworks.module.css
+++ b/src/Components/common/SocialNetworks/SocialNetworks.module.css
@@ -41,3 +41,14 @@
     flex-wrap: wrap;
     padding-left: 0;
 }
+
+@media screen and (min-width: 360px) and (max-width: 700px) {
+    .iconLink {
+        width: 50px;
+        height: 50px;
+    }
+
+    .iconsContainer {
+        padding-left: 10px;
+    }
+}
