--- a/src/Components/Header/Nav/Nav.module.css
+++ b/src/Components/Header/Nav/Nav.module.css
@@ -26,7 +26,7 @@
     display: none;
 }
 
-@media screen and (min-width: 360px) and (max-width: 700px) {
+@media screen and (min-width: 360px) and (max-width: 740px) {
 
     .hamburger_menu {
         border: none;
@@ -76,7 +76,7 @@
         position: absolute;
         width: 100%;
         height: 2px;
-        background-color: #333;
+        background-color: #ff014f;
         transition-duration: .5s;
     }
 
@@ -97,7 +97,7 @@
         left: -100%;
         width: 250px;
         margin: 0;
-        padding: 100px 0 400px 0;
+        padding: 100px 0 1000px 0;
         list-style: none;
         background-color: #ECEFF1;
         box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
