--- a/src/Components/MyProjects/Project/Project.module.css
+++ b/src/Components/MyProjects/Project/Project.module.css
@@ -4,10 +4,11 @@
     flex-direction: column;
     align-items: center;
     border-radius: 7px;
+    margin: 0 10px;
 }
 
 .projectBlock {
-    margin-bottom: 40px;
+    margin: 40px 0;
     height: 400px;
     width: 100%;
     border-radius: 6px;
@@ -73,7 +74,7 @@
     opacity: 1;
 }
 
-@media screen and (min-width: 360px) and (max-width: 700px) {
+@media screen and (min-width: 360px) and (max-width: 740px) {
     .projectMainBlock {
         margin: 30px 0;
     }
