--- a/src/Components/common/Title/Title.module.css
+++ b/src/Components/common/Title/Title.module.css
@@ -24,8 +24,12 @@
     font-weight: 500;
 }
 
-@media screen and (min-width: 360px) and (max-width: 700px) {
+@media screen and (min-width: 360px) and (max-width: 740px) {
     .description {
         line-height: 25px;
+    }
+
+    .title {
+        padding: 0 5px;
     }
 }
