--- a/src/components/Header/Nav/Nav.module.scss
+++ b/src/components/Header/Nav/Nav.module.scss
@@ -29,6 +29,10 @@
     display: none;
 }
 
+.menu__item:hover {
+    cursor: pointer;
+}
+
 @media screen and (min-width: 360px) and (max-width: 740px) {
 
     .hamburger_menu {
